mesh-service-b/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-sc-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-sc
spec:
  hosts:
    - "*"
  gateways:
    - test-sc-gateway
  http:
    - match:
        - uri:
            prefix: /api/sc
      route:
        - destination:
            port:
              number: 1015
            host: mesh-service-b
